--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -1,4 +1,9 @@
 .block{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.block .block-item{
     align-items: center;
     background-color: #d1c8db;
     display: flex;
@@ -8,10 +13,10 @@
     width: 20%;
     position: relative;
 }
-.block p,i{
-    position: absolute;
+.block p,i{  
+    position: absolute;   
 }
-a.block:hover{
+.block-item:hover{
     border: 1px solid black;
     cursor: pointer;
 }
