--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,21 @@
   margin: auto;
   justify-content: space-evenly;
 }
+.bell{
+  margin-top: 10px;
+  position: relative;
+  height: 50px;
+  width: 50px;
+}
+.bell .nofication.on{
+  position: absolute;
+  left: 32px;
+
+  background-color: red;
+  border-radius: 50%;
+  height: 10px;
+  width:10px;
+}
 /*
 .App-logo {
   height: 40vmin;
